--- a/static/css/add_user.css
+++ b/static/css/add_user.css
@@ -2,7 +2,7 @@
     font-family: 'Josefin Sans';
 }
 body {
-    background-image: url('../img/Nature-wallpapers-Full-HD-backgroud.jpeg');
+    background-image: url('../img/adduser.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -12,15 +12,16 @@ h2{
     text-align: center;
     font-weight: 900;
     font-size: 30px;
-    text-shadow: 2px 3px 15px rgb(230, 196, 196),-5px -3px 10px rgb(219, 195, 89),8px -3px 10px rgb(64, 30, 4);
+    /* text-shadow: 2px 3px 15px rgb(230, 196, 196),-5px -3px 10px rgb(219, 195, 89),8px -3px 10px rgb(64, 30, 4); */
 }
 /* Apply styles to the form container */
 form {
-    width: 500px;
-    padding: 50px;
-    max-width: 400px;
+    width: 550px;
+    padding: 60px;
+
+ 
     margin: 20px auto;
-    box-shadow: -2px -2px 30px black, -4px -4px 30px black,3px 6px 30px black, 6px 6px 30px black,-6px 6px 20px black,6px -6px 20px black;
+    box-shadow: -2px -2px 10px black, -4px -4px 30px black,3px 6px 30px black, 6px 6px 30px black,-6px 6px 20px black,6px -6px 20px black;
     border-radius: 15px;    
 }
 
@@ -44,7 +45,7 @@ form input[type="tel"] {
     padding: 10px;
     margin-bottom: 15px;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 18px;
     background: transparent;
     color:white;
 }
@@ -74,4 +75,18 @@ button[type="submit"] {
     left: 10px;
     top: 10px;
     border-radius: 20px;
+}
+.Cancel-btn{
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    border-bottom: none;
+    font-size: 16px;
+    position : relative;
+    top: 20px;
+    left: 10px;
 }
