--- a/static/css/add_user.css
+++ b/static/css/add_user.css
@@ -40,7 +40,8 @@ form label {
 form input[type="text"],
 form input[type="email"],
 form input[type="password"],
-form input[type="tel"] {
+form input[type="tel"],
+form input[type="date"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
