--- a/static/css/update_user.css
+++ b/static/css/update_user.css
@@ -15,12 +15,14 @@ body {
 h1 {
     text-align: center;
     margin-top: 50px; 
-    text-shadow: 2px 2px 3px white , 4px -2px 6px rgb(229, 219, 219);
+    /* text-shadow: 1px 1px 10px rgb(107, 94, 94) , 4px -2px 6px rgb(229, 219, 219); */
     font-family: 'Carter One', cursive;
+    text-shadow: 1px 1px 20px rgb(18, 17, 17) , 4px -2px 6px rgb(229, 219, 219);
 }
 
 form {
     width: 400px;
+    height: 400px;
     margin: 0 auto;
     background-color: #fff;
     padding: 20px;
@@ -32,6 +34,12 @@ form {
 label {
     display: block;
     margin-bottom: 5px;
+    font-weight: bold;
+    font-size: 20px;
+    margin: 5px;
+    position: relative;
+    left: 40px;
+    font-family: 'Architects Daughter';
 }
 /* 
 input[type="text"],
@@ -55,10 +63,13 @@ button[type="submit"] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    position: relative;
+    top: 20px;
 }
 
 button[type="submit"]:hover {
     background-color: #0056b3;
+  
 }
 
 #messages {
@@ -77,10 +88,10 @@ button[type="submit"]:hover {
 .user_update {
     color: #dc3545; 
     width: 500px;
-    height: 500px;
+    height: 600px;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    box-shadow: 2px 3px 20px rgb(211, 189, 189),-6px -3px 20px rgb(10, 2, 17),8px -3px 20px rgb(22, 10, 0);
+    box-shadow: 1px 1px 30px rgb(211, 189, 189),-6px -3px 20px rgb(10, 2, 17),8px -3px 20px rgb(22, 10, 0);
     position: relative;
     top:90px;
     left:500px;
@@ -88,5 +99,36 @@ button[type="submit"]:hover {
     border-radius: 10px;
 }
 input{
-    color:#fff;
+    color:black;
+    padding: 10px;
+    width: 300px;
+    border-radius: 15px;
+    letter-spacing: 2px;
+    font: 700;
+    position: relative;
+    left: 40px;
+    font-family: 'Architects Daughter'; 
+    font-size: 16px;
+}
+/* button [type="button"]{
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    position: relative;
+    top: 20px;
+} */
+#back{
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    position: relative;
+    top: 30px;
 }
