--- a/static/css/user_list.css
+++ b/static/css/user_list.css
@@ -17,8 +17,9 @@ body {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: absolute;
-  top: 220px;
-  left: 250px;
+  top: 230px;
+  left: 200px;
+  width: auto;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   box-shadow: 2px 3px 10px rgb(211, 189, 189),-6px -3px 20px rgb(10, 2, 17),8px -3px 20px rgb(22, 10, 0);
@@ -32,6 +33,7 @@ table {
 
 table th, table td {
   padding: 10px;
+  width: auto;
   border-bottom: 1px solid #ddd;
 }
 
