--- a/templates/accounts/profile/add_user.html
+++ b/templates/accounts/profile/add_user.html
@@ -57,8 +57,12 @@
                 <input type='tel' class="form-control" id="phone_number" name="phone_number" placeholder="Phone Number"
                     required>
             </div>
+            <div class="form-group">
+                <label for="date_of_birth">Date of Birth</label>
+                <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" required>
+            </div>
             <button type="submit" class="btn btn-primary">Add User</button>
-            <button type="button" class="btn btn-primary Cancel-btn" onclick="window.history.back()">Cancel</button>
+            <button type="button" class="btn btn-primary Cancel-btn" onclick="ResetForm()">Reset</button>
             {% if messages %}
             {{ messages }}
             {% endif %}
