adding filter to search a user

--- a/static/css/user_list.css
+++ b/static/css/user_list.css
@@ -100,3 +100,13 @@ svg{
 #tb_action{
   text-align: center;
 }
+
+.container1{
+  position: relative;
+  top: 1000px;
+  left: 200px;
+  font-size: 40px;
+  color: #ddd;
+  left: 650px;
+ 
+}
